Fix extra margin from office image

--- a/_sass/components/Workplace.scss
+++ b/_sass/components/Workplace.scss
@@ -25,6 +25,7 @@
 
   &__office {
     left: 50%;
+    margin-left: -30px;
     padding-bottom: 60px;
     position: relative;
     transform: translateX(-50%);
